sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:4: error: Invalid literal number
for (k<-1to getNombreValeurs()) {
        ^AlgBubbleSort2:13: error: ')' expected but '}' found.
}
^