sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {

for (k<-1to getNombreValeurs()) {
	
	for (i <- 0 to getNombreValeurs()-2) {
		if (plusPetit(i+1,i)==true) {
			echange(i,i+1)
			
		}
}
}
}
